// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader12 Loader should render image avatar properly 1`] = `
<div>
  <div
    class="sc-gsTCUz fVkNb"
  >
    <div
      class="sc-bdfBwQ duuDkO"
    />
  </div>
</div>
`;

exports[`Loader12 Loader should render with all the props given 1`] = `
<div>
  <div
    class="sc-gsTCUz ciATyB"
  >
    <div
      class="sc-bdfBwQ bfKKDX"
    />
  </div>
</div>
`;

exports[`Loader12 Loader should render with default theme 1`] = `
<div>
  <div
    class="sc-gsTCUz xBROB"
  >
    <div
      class="sc-bdfBwQ duuDkO"
    />
  </div>
</div>
`;
